--- a/site/guide/model-validation/add-manage-model-findings.qmd
+++ b/site/guide/model-validation/add-manage-model-findings.qmd
@@ -14,7 +14,7 @@ Add findings within the {{< var validmind.platform >}} at the model or documenta
 - [x] {{< var link.login >}}
 - [x] The model is already registered in the model inventory.[^1]
 - [x] Model documentation is completed or in progress for your model.[^2]
-- [x] You are a [{{< fa circle-check >}} Validator]{.bubble} or assigned another role with sufficient permissions to perform the tasks in this guide.[^3] 
+- [x] You are a [{{< fa circle-check >}} Validator]{.bubble} or assigned another role with sufficient permissions to perform the tasks in this guide.[^3]
 
 :::
 
@@ -22,9 +22,17 @@ Add findings within the {{< var validmind.platform >}} at the model or documenta
 
 {{< include _add-model-findings.qmd >}}
 
+::: {.panel-tabset}
+
+#### Add finding via overview
+
 {{< include _add-finding-via-overview.qmd >}}
 
+#### Add finding via section
+
 {{< include _add-finding-via-section.qmd >}}
+
+:::
 
 ## Add findings on validation reports
 
@@ -71,7 +79,7 @@ As findings get resolved or require other changes during the model validation pr
    - Assignee
    - Documentation section
 
-   You can also add comments to a finding. 
+   You can also add comments to a finding.
 
 Most updates are applied immediately but you must click **Save** to make changes to the finding title, description, proposed remediation plan, and attachments effective. 
 
@@ -81,7 +89,9 @@ Most updates are applied immediately but you must click **Save** to make changes
 
 ### Manage supporting documentation
 
-After a finding is created, you're able to add supporting documentation to it. 
+After a finding is created, you're able to add supporting documentation to it.
+
+::: {.panel-tabset}
 
 #### Add attachments to findings
 
@@ -98,6 +108,8 @@ Uploaded files must be less than 50 MB each in size.
 1. On the findings detail page, click on the **[attachments]{.smallcaps}** header.
 
 {{< include /guide/model-inventory/_remove-attachments.qmd >}}
+
+:::
 
 ## Delete model findings
 
@@ -126,7 +138,7 @@ If you logged a finding in error or otherwise no longer need to track that findi
 
 [^3]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
-[^4]: [Assess compliance](/guide/model-validation/assess-compliance.qmd#link-findings-to-reports)
+[^4]: [Link findings to reports](/guide/model-validation/assess-compliance.qmd#link-findings-to-reports)
 
 [^5]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
@@ -136,6 +148,6 @@ If you logged a finding in error or otherwise no longer need to track that findi
 
 [^8]: [View model activity](/guide/model-inventory/view-model-activity.qmd)
 
-[^9]: [Assess compliance](/guide/model-validation/assess-compliance.qmd#link-findings-to-reports)
+[^9]: [Link findings to reports](/guide/model-validation/assess-compliance.qmd#link-findings-to-reports)
 
 [^10]: [View and filter model findings](view-filter-model-findings.qmd)
