--- a/site/guide/model-validation/view-filter-model-findings.qmd
+++ b/site/guide/model-validation/view-filter-model-findings.qmd
@@ -12,13 +12,17 @@ Access a complete list of filterable findings logged across all your models in t
 - [x] {{< var link.login >}}
 - [x] The model is already registered in the model inventory.[^1]
 - [x] Model documentation is completed or in progress for your model.[^2]
-- [x] You are a [{{< fa circle-check >}} Validator]{.bubble} or assigned another role with sufficient permissions to perform the tasks in this guide.[^3] 
+- [x] You are a [{{< fa circle-check >}} Validator]{.bubble} or assigned another role with sufficient permissions to perform the tasks in this guide.[^3]
 
 :::
 
 ## View model findings
 
 You can review findings for all models at once, or only look at findings linked to a specific model.
+
+::: {.panel-tabset}
+
+#### All model findings
 
 {{< include _view-all-findings.qmd >}}
 
@@ -55,6 +59,8 @@ To view findings linked to a specific model:
    - Notes
 
    Click on the attachment to view or download the file.
+
+:::
 
 ## Filter and sort model findings
 
@@ -112,6 +118,7 @@ Once customized, you can save a view for later application.[^6]
 Saved views are unique to you and do not display for other users in your organization.
 :::
 
+::: {.panel-tabset}
 
 #### Save a findings view
 
@@ -133,6 +140,8 @@ Deletion of saved views is permanent.
 
 {{< include /guide/model-inventory/_remove-layout-view.qmd >}}
 
+:::
+
 
 <!-- FOOTNOTES -->
 
@@ -146,7 +155,7 @@ Deletion of saved views is permanent.
 
 [^5]: [Manage supporting documentation](add-manage-model-findings.qmd#manage-supporting-documentation)
 
-[^6]: [Save new findings view](#save-new-findings-view)
+[^6]: [Manage custom findings views](#manage-custom-findings-views)
 
 [^7]: [Customize model findings layout](#customize-model-findings-layout)
 
