--- a/site/guide/reporting/working-with-analytics.qmd
+++ b/site/guide/reporting/working-with-analytics.qmd
@@ -60,8 +60,10 @@ The {{< var validmind.platform >}} provides two default report pages to get you 
 ::::
 
 ::: {.callout-important}
-Default analytics pages cannot be modified. 
+Default analytics pages cannot be modified.
 :::
+
+::: {.panel-tabset}
 
 #### Reports on models
 
@@ -93,6 +95,8 @@ Findings by Business Unit
 
 Findings by Model
 : Specific to individual models, details the findings for each model, including any errors, limitations, or assumptions that may affect the model's performance. This helps in assessing the reliability and accuracy of each model.
+
+:::
 
 ## Arrange report widgets
 
