--- a/site/releases/2024/2024-mar-27/highlights.qmd
+++ b/site/releases/2024/2024-mar-27/highlights.qmd
@@ -36,9 +36,9 @@ Test result metadata includes:
 
 ::: {.w-50-ns}
 
-Test result metadata is available directly in your model documentation: 
+Test result metadata is available directly in your model documentation:
 
-![Detail expansion of test runs on the test result timeline](/developer/model-documentation/test-run-details.gif){fig-alt="A gif showcasing detail expansion of test runs on the test result timeline" .screenshot}
+![Detail expansion of test runs on the test result timeline](test-run-details.gif){fig-alt="A gif showcasing detail expansion of test runs on the test result timeline" .screenshot}
 
 :::
 
@@ -143,7 +143,7 @@ The same customization is available on the **{{< fa triangle-exclamation >}} Fin
 :::
 
 ::: {.w-30-ns}
-[All model findings](/guide/model-validation/view-filter-model-findings.qmd#all-model-findings){.button .button-green}
+[View model findings](/guide/model-validation/view-filter-model-findings.qmd#view-model-findings){.button .button-green}
 
 :::
 
