--- a/site/guide/model-validation/_add-finding-via-overview.qmd
+++ b/site/guide/model-validation/_add-finding-via-overview.qmd
@@ -1,13 +1,10 @@
 
 :::: {.content-visible unless-format="revealjs"}
-
-#### Add finding via overview
-
 To log a finding from the documentation overview: 
 
-1. On your model's **{{< fa book-open >}} Documentation** page, click **{{< fa plus >}} Add Finding**.
+a. On your model's **{{< fa book-open >}} Documentation** page, click **{{< fa plus >}} Add Finding**.
 
-1. On the **Add Model Finding** modal that opens, provide information for: 
+a. On the **Add Model Finding** modal that opens, provide information for: 
 
    - Title
    - Risk area
@@ -17,7 +14,7 @@ To log a finding from the documentation overview:
    - Documentation section
    - Description
 
-1. When you are done, click **Save** to submit the finding. 
+a. When you are done, click **Save** to submit the finding. 
 
    Once created, you can then add supporting documentation to your finding.^[[Manage supporting documentation](/guide/model-validation/add-manage-model-findings.qmd#manage-supporting-documentation)]
 
