--- a/site/guide/model-validation/_link-findings-to-reports.qmd
+++ b/site/guide/model-validation/_link-findings-to-reports.qmd
@@ -13,7 +13,7 @@
 
    ![Validation report section 2.1.1. that shows a compliance assessment with the option to link to finding](/guide/model-validation/link-finding.png){fig-alt="A screenshot of the validation report section 2.1.1. that shows a compliance assessment with the option to link to finding" .screenshot}
 
-1. On the **Link Finding to Report** modal that opens, select from the list of available findings, or click **{{< fa plus >}} Create New Finding**.^[[Create new finding](/guide/model-validation/add-manage-model-findings.qmd#add-findings-on-validation-reports)] 
+1. On the **Link Finding to Report** modal that opens, select from the list of available findings, or click **{{< fa plus >}} Create New Finding**.^[[Add findings on validation reports](/guide/model-validation/add-manage-model-findings.qmd#add-findings-on-validation-reports)] 
 
 1. Click **Update Linked Findings**.
 
