--- a/site/guide/reporting/_view-report-data.qmd
+++ b/site/guide/reporting/_view-report-data.qmd
@@ -14,8 +14,8 @@ Reports will not include data or findings from archived models.^[[Archive and de
     a. Click on the **Findings** tab. 
     b. Under **Findings by Risk Area**, click on the risk area you want more details for.
     c. On the page that opens, the applicable findings are listed:
-        - Filter this list of findings^[[View and filter model findings](/guide/model-validation/view-filter-model-findings.qmd#filter-and-sort-model-findings)]
-        - Or customize column headers that display on this findings view^[[View and filter model findings](/guide/model-validation/view-filter-model-findings.qmd#customize-model-findings-layout)]
+        - Filter this list of findings^[[Filter and sort model findings](/guide/model-validation/view-filter-model-findings.qmd#filter-and-sort-model-findings)]
+        - Or customize column headers that display on this findings view^[[Customize model findings layout](/guide/model-validation/view-filter-model-findings.qmd#customize-model-findings-layout)]
     d. To get more details on the finding itself, click on the title of the finding to take you to the **{{< fa triangle-exclamation >}} Model Findings** section for the specific model the finding applies to.
 
 ::::
