--- a/site/guide/monitoring/ongoing-monitoring.qmd
+++ b/site/guide/monitoring/ongoing-monitoring.qmd
@@ -132,7 +132,7 @@ To try out monitoring, check out the code sample for ongoing monitoring of model
 
 <!-- FOOTNOTES -->
 
-[^1]: [Model risk management (Regulatory requirements)](/about/overview-model-risk-management.qmd#regulatory-requirements)
+[^1]: [Regulatory requirements](/about/overview-model-risk-management.qmd#regulatory-requirements)
 
 [^2]: [Working with model documentation](/guide/model-documentation/working-with-model-documentation.qmd)
 
