--- a/site/guide/reporting/manage-custom-reports.qmd
+++ b/site/guide/reporting/manage-custom-reports.qmd
@@ -51,7 +51,7 @@ Add, edit, or remove custom data to your analytics within the {{< var validmind.
 {{< include _reports-filtering.qmd >}}
 
 [color]{.smallcaps}
-: Set the display color for the counter. 
+: Set the display color for the counter.
 :::
 
 ::: {.attn}
@@ -67,13 +67,17 @@ Add, edit, or remove custom data to your analytics within the {{< var validmind.
 
 {{< include /guide/reporting/_add-custom-analytics.qmd >}}
 
-#### Create an analytics page
+::: {.panel-tabset}
+
+#### 1. Create an analytics page
 
 {{< include /guide/reporting/_create-an-analytics-page.qmd >}}
 
-#### Create a visualization
+#### 2. Create a visualization
 
 {{< include /guide/reporting/_create-a-visualization.qmd >}}
+
+:::
 
 ## Edit custom analytics
 
@@ -92,6 +96,8 @@ Removing a custom analytics page or visualization cannot be undone.
 :::
 
 You can either delete a entire custom analytics page, or remove a single custom visualization: 
+
+::: {.panel-tabset}
 
 #### Delete an analytics page
 
@@ -114,7 +120,7 @@ You can either delete a entire custom analytics page, or remove a single custom 
 
 3. Select [**{{< fa trash-can >}} Remove Visualization**]{.red}.
 
-
+:::
 
 
 <!-- FOOTNOTES -->
