--- a/site/guide/attestation/review-attestation-questionnaires.qmd
+++ b/site/guide/attestation/review-attestation-questionnaires.qmd
@@ -52,7 +52,7 @@ When prompted on your dashboard:
    - When the attestation status changed.
    - Notes that were provided to document the process.
 
-      If you previously rejected an attestation questionnaire, review the model owner’s response on resubmission. 
+      If you previously rejected an attestation questionnaire, review the model owner’s response on resubmission.
 
 4. Review the attestation questionnaire:
 
@@ -85,7 +85,7 @@ These steps apply to attestations that are in the [**{{< fa clipboard-check >}} 
 
 ### Steps
 
-Following your [review of an attestation questionnaire](#review-attestation-questionnaires) or when prompted on your dashboard:
+Following your review of an attestation questionnaire[^5] or when prompted on your dashboard:
 
 ::: {.column-margin}
 ![Attestation sign-off](sign-off-attestation.png){fig-alt="Prompt to review the attestation with a button labelled 'Sign Off'" .screenshot}
@@ -107,6 +107,7 @@ Following your [review of an attestation questionnaire](#review-attestation-ques
 
 After you sign off, the attestation is recorded in the model’s history. Attestation sign-offs are permanent and cannot be changed.
 
+
 <!-- FOOTNOTES -->
 
 [^1]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
@@ -115,4 +116,6 @@ After you sign off, the attestation is recorded in the model’s history. Attest
 
 [^3]: [Complete attestation questionnaires](/guide/attestation/complete-attestation-questionnaires.qmd)
 
-[^4]: [Manage permissions](/guide/configuration/manage-permissions.qmd) 
+[^4]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
+
+[^5]: [Review attestation questionnaires](#review-attestation-questionnaires)
