--- a/site/guide/reporting/_create-a-visualization.qmd
+++ b/site/guide/reporting/_create-a-visualization.qmd
@@ -1,24 +1,24 @@
 :::: {.content-visible unless-format="revealjs"}
-1. On **{{< fa square-poll-vertical >}} Analytics**, click on the tab for your custom page you'd like to add a visualization to. 
+a. On **{{< fa square-poll-vertical >}} Analytics**, click on the tab for your custom page you'd like to add a visualization to. 
 
-1. Click **{{< fa pencil >}} Edit Dashboard** and select **{{< fa pencil >}} Add Widget** then **{{< fa pencil >}} Add Visualization**.
+a. Click **{{< fa pencil >}} Edit Dashboard** and select **{{< fa pencil >}} Add Widget** then **{{< fa pencil >}} Add Visualization**.
 
-1. On the Add Visualization panel, enter in your **[title]{.smallcaps}**.
+a. On the Add Visualization panel, enter in your **[title]{.smallcaps}**.
 
-1. Select a **[visualization type]{.smallcaps}**:
+a. Select a **[visualization type]{.smallcaps}**:
 
     - **{{< fa chart-simple >}} Bar Chart**
     - **{{< fa chart-pie >}} Pie Chart**
     - **{{< fa hashtag >}} Counter**
 
-1. Select a **[dataset]{.smallcaps}**:
+a. Select a **[dataset]{.smallcaps}**:
 
     - **Findings**^[[Working with model findings](/guide/model-validation/working-with-model-findings.qmd)]
     - **Inventory Models**^[[Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd)]
 
-1. Select the visualization configuration options to apply to the dataset.^[[Visualization configuration options](/guide/reporting/manage-custom-reports.qmd#visualization-configuration-options)]
+a. Select the visualization configuration options to apply to the dataset.^[[Visualization configuration options](/guide/reporting/manage-custom-reports.qmd#visualization-configuration-options)]
 
-1. When you are done configuring your dataset, click **Add Visualization** to insert your custom widget onto the analytics page.
+a. When you are done configuring your dataset, click **Add Visualization** to insert your custom widget onto the analytics page.
 
 For example, to create an open findings visualization in stacked bar chart format, for average severity level, grouped by business unit (x-axis) and risk area (y-axis), you would set:
 
