--- a/site/about/contributing/validmind-community.qmd
+++ b/site/about/contributing/validmind-community.qmd
@@ -5,13 +5,83 @@ aliases:
   - /about/validmind-community.html
 ---
 
-Work with financial models, in model risk management (MRM), or are simply enthusiastic about artificial intelligence (AI) and machine learning and how these tools are actively shaping our futures within the finance industry and beyond? Congratulations — you're already part of the {{< var vm.product >}} community! Come learn and play with us. 
+Work with financial models, in model risk management (MRM), or are simply enthusiastic about artificial intelligence (AI) and machine learning and how these tools are actively shaping our futures within the finance industry and beyond? Congratulations — you're already part of the {{< var vm.product >}} community! Come learn and play with us.
 
 ## Interact with {{< var vm.product >}}
-- **[Join our Slack community](join-community.qmd){target="_blank"}** — Be part of building a space for AI risk practitioners and those looking to break into the industry. Get technical support, share ideas, chat about model risk, AI, large language models, and much more!
-- **[Sign up for our newsletter](https://validmind.com/community/)** — Receive exciting updates from {{< var vm.product >}} and curated material surrounding AI risk management. 
-- Keep up with the latest news in AI and MRM, as well as announcements and original content from {{< var vm.product >}} **[on our blog](https://validmind.com/blog/)**. 
-- Want to connect with other inquiring minds? **[Find out what events {{< var vm.product >}} is hosting and attending](https://validmind.com/events/)** — we'd be delighted to see you! 
+
+::: {.panel-tabset}
+
+#### Join our Slack community
+
+:::: {.flex .flex-wrap .justify-around}
+
+::: {.w-70-ns}
+Be part of building a space for AI risk practitioners and those looking to break into the industry. Get technical support, share ideas, chat about model risk, AI, large language models, and much more!
+
+:::
+
+::: {.w-30-ns}
+
+[Join {{< var vm.product >}} Community Slack](join-community.qmd){target="_blank" .button}
+
+:::
+
+::::
+
+#### Sign up for our newsletter
+
+:::: {.flex .flex-wrap .justify-around}
+
+::: {.w-80-ns}
+Receive exciting updates from {{< var vm.product >}} and curated material surrounding AI risk management. 
+
+:::
+
+::: {.w-20-ns}
+
+[Subscribe now](https://validmind.com/community/){target="_blank" .button}
+
+:::
+
+::::
+
+#### Read our blog
+
+:::: {.flex .flex-wrap .justify-around}
+
+::: {.w-80-ns}
+Keep up with the latest news in AI and MRM, as well as announcements and original content from {{< var vm.product >}} on our blog.
+
+:::
+
+::: {.w-20-ns}
+
+[Read blog](https://validmind.com/blog/){target="_blank" .button}
+
+:::
+
+::::
+
+
+#### Attend events with {{< var vm.product >}}
+
+:::: {.flex .flex-wrap .justify-around}
+
+::: {.w-80-ns}
+Want to connect with other inquiring minds? Find out what events {{< var vm.product >}} is hosting and attending — we'd be delighted to see you!
+
+:::
+
+::: {.w-20-ns}
+
+[{{< var vm.product >}} events](https://validmind.com/events/){target="_blank" .button}
+
+:::
+
+::::
+
+
+:::
 
 ## Build with {{< var vm.product >}}
 
@@ -29,7 +99,57 @@ As a member of the {{< var vm.product >}} community, we invite you to be part of
 ### Contribution ideas
 Please note that all community contributions are subject to review by the {{< var vm.product >}} team. See our [software license agreement](/about/fine-print/license-agreement.qmd) for more details. 
 
-- **[Code samples](/developer/samples-jupyter-notebooks.qmd)** — Have a Jupyter Notebook that works perfectly with {{< var vm.product >}}, or covers a sample use case not already provided? Send it to us!
-- **[{{< var validmind.developer >}}](https://github.com/validmind/validmind-library/)** — Live by the {{< var vm.developer >}}, and have an idea that will streamline the experience for others? Let us know!
-- **[Product documentation](https://github.com/validmind/documentation)** — Spot a typo, or have identified a gap in instruction you think would be beneficial for the community to fill? Submit an edit! 
+::: {.panel-tabset}
 
+#### Code samples
+
+:::: {.flex .flex-wrap .justify-around}
+
+::: {.w-80-ns}
+Have a Jupyter Notebook that works perfectly with {{< var vm.product >}}, or covers a sample use case not already provided? Send it to us!
+
+:::
+
+::: {.w-20-ns}
+
+[Code samples](/developer/samples-jupyter-notebooks.qmd){.button}
+
+:::
+
+::::
+
+#### {{< var validmind.developer >}}
+
+:::: {.flex .flex-wrap .justify-around}
+
+::: {.w-80-ns}
+Live by the {{< var vm.developer >}}, and have an idea that will streamline the experience for others? Let us know!
+
+:::
+
+::: {.w-20-ns}
+
+[{{< var validmind.developer >}}](https://github.com/validmind/validmind-library/){.button}
+
+:::
+
+::::
+
+#### Product documentation
+
+:::: {.flex .flex-wrap .justify-around}
+
+::: {.w-70-ns}
+Spot a typo, or have identified a gap in instruction you think would be beneficial for the community to fill? Submit an edit to our GitHub repository! 
+
+:::
+
+::: {.w-30-ns}
+
+[{{< fa brands github >}} validmind/documentation](https://github.com/validmind/documentation){.button}
+
+:::
+
+::::
+
+:::
