--- a/site/about/overview-model-risk-management.qmd
+++ b/site/about/overview-model-risk-management.qmd
@@ -204,8 +204,6 @@ By integrating these features, {{< var vm.product >}} provides a comprehensive s
 
 ::::
 
-
-
 ## Ready to try out {{< var vm.product >}}?
 
 :::{#quickstart}
@@ -218,7 +216,7 @@ By integrating these features, {{< var vm.product >}} provides a comprehensive s
 
 [^2]: [Preparing validation reports](/guide/model-validation/preparing-validation-reports.qmd)
 
-[^3]: [Working with model workflows](/guide/model-workflows/working-with-model-workflows.qmd)
+[^3]: [Setting up model workflows](/guide/model-workflows/setting-up-model-workflows.qmd)
 
 [^4]: [Working with templates](/guide/templates/working-with-templates.qmd)
 
