--- a/site/releases/2024/2024-dec-06/release-notes.qmd
+++ b/site/releases/2024/2024-dec-06/release-notes.qmd
@@ -514,7 +514,7 @@ We now support including attachment fields as a request field on a User Action s
 :::
 
 ::: {.w-30-ns .tc}
-[Setting up model workflows](/guide/model-workflows/setting-up-model-workflows.qmd#attachments){.button}
+[Setting up model workflows](/guide/model-workflows/setting-up-model-workflows.qmd){.button}
 
 :::
 
@@ -535,9 +535,7 @@ We continue to add new functionality to model workflows within the {{< var valid
 :::
 
 ::: {.w-30-ns .tc}
-[Approval steps](/guide/model-workflows/setting-up-model-workflows.qmd#approval){.button}
-
-[Condition Branch steps](/guide/model-workflows/setting-up-model-workflows.qmd#condition-branch){.button}
+[Workflow step types](/guide/model-workflows/setting-up-model-workflows.qmd#workflow-step-types){.button}
 
 :::
 
