--- a/site/releases/2024/2024-dec-06/release-notes.qmd
+++ b/site/releases/2024/2024-dec-06/release-notes.qmd
@@ -520,7 +520,7 @@ We now support including attachment fields as a request field on a User Action s
 
 ::::
 
-![User Action step configuration with a request field of Workflow Attachment](/guide/model-workflows/upload-workflow-attachment.png){fig-alt="A screenshot showing a User Action step configuration with a request field of Workflow Attachment" .screenshot}
+![User Action step configuration with a request field of Workflow Attachment](upload-workflow-attachment.png){fig-alt="A screenshot showing a User Action step configuration with a request field of Workflow Attachment" .screenshot}
 
 ##### Ability to configure divergent paths in workflows
 
@@ -541,7 +541,7 @@ We continue to add new functionality to model workflows within the {{< var valid
 
 ::::
 
-![Example Condition Branch where GenAI models require special approval from the User group Legal Team](/guide/model-workflows/example-condition-branch.png){fig-alt="A screenshot showing an example Condition Branch where GenAI models require special approval from the User group Legal Team" .screenshot width=90%}
+![Example Condition Branch where GenAI models require special approval from the User group Legal Team](/guide/model-workflows/example_condition-branch.png){fig-alt="A screenshot showing an example Condition Branch where GenAI models require special approval from the User group Legal Team" .screenshot width=90%}
 
 #### Model inventory fields
 
@@ -1061,13 +1061,13 @@ In our Jupyter Notebook samples, we've now included information within the noteb
 <!-- Resource statuses > model lifecycle statuses:**
 https://github.com/validmind/documentation/pull/278 -->
 
-resource statuses > model lifecycle statuses
-: We previously referred to model lifecycle statuses as "resource statuses."
+model lifecycle statuses > model stages
+: We previously referred to model stages as "model lifecycle statuses."
 
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-60-ns}
-Model lifecycle statuses have been renamed in the {{< var validmind.platform >}} and documentation updated to reflect this shift. 
+Model stages have been renamed in the {{< var validmind.platform >}} and documentation updated to reflect this shift. 
 
 :::
 
