Workflows training wip

--- a/site/guide/model-workflows/configure-model-workflows.qmd
+++ b/site/guide/model-workflows/configure-model-workflows.qmd
@@ -40,7 +40,7 @@ To set up a new custom workflow, you'll need to complete these three steps in se
 
 ### Link workflow together
 
-{{< include s>}}
+{{< include _link-workflow-together.qmd >}}
 
 ## Edit existing workflows
 
