--- a/site/training/administrator-fundamentals/validmind-for-model-risk-management.qmd
+++ b/site/training/administrator-fundamentals/validmind-for-model-risk-management.qmd
@@ -94,6 +94,107 @@ Already logged in and refreshed this module? Click [{{< fa chevron-right >}}]() 
 
 # Set up workflows {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
+## {.scrollable}
+
+:::: {.columns}
+::: {.column width="30%" .pr4 .f2}
+Model workflow elements
+
+::: {.f5 .nt2 .pl2 .mb4}
+(Scroll down for the full instructions.)
+:::
+
+::: {.tc}
+[Learn more ...](/guide/model-workflows/setting-up-model-workflows.qmd){.button target="_blank"}
+:::
+
+<br>Learn how to **configure workflows** on the next page. {{< fa hand-point-right >}}
+
+:::
+
+::: {.column width="70%" .bl .pl4 .f4}
+
+{{< include /guide/model-workflows/_set-up-model-workflows.qmd >}}
+
+A workflow is comprised of an interplay of these elements:
+
+::: {.panel-tabset}
+### Workflow step types
+
+{{< include /guide/model-workflows/_workflow-step-types.qmd >}}
+
+### Conditional requirements
+
+{{< include /guide/model-workflows/_conditional-requirements.qmd >}}
+
+### Workflow states
+
+{{< include /guide/model-workflows/_workflow-states.qmd >}}
+
+:::
+
+:::
+::::
+
+## {.scrollable}
+
+:::: {.columns}
+::: {.column width="30%" .pr4 .f2}
+Model workflow elements
+
+::: {.f5 .nt2 .pl2 .mb4}
+(Scroll down for the full instructions.)
+:::
+
+::: {.tc}
+[Learn more ...](/guide/model-workflows/setting-up-model-workflows.qmd){.button target="_blank"}
+:::
+
+<br>Learn how to **configure workflows** on the next page. {{< fa hand-point-right >}}
+
+:::
+
+::: {.column width="70%" .bl .pl4 .f4}
+
+{{< include /guide/model-workflows/_set-up-model-workflows.qmd >}}
+
+A workflow is comprised of an interplay of these elements:
+
+::: {.panel-tabset}
+### Workflow step types
+
+{{< include /guide/model-workflows/_workflow-step-types.qmd >}}
+
+### Conditional requirements
+
+{{< include /guide/model-workflows/_conditional-requirements.qmd >}}
+
+### Workflow states
+
+{{< include /guide/model-workflows/_workflow-states.qmd >}}
+
+:::
+
+:::
+::::
+
+## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
+
+:::: {.slideover--b .auto-collapse-10}
+::: {.tc}
+**Set up a model workflow**
+:::
+
+1. Select the name of your model you registered for this course to open up the model details page.
+2. On the landing page of your model, locate the [active workflows]{.smallcaps} section and the workflow you'd like to transition.
+3. If an action is available to your role, you'll see it listed under that workflow:
+    - Click **{{< fa arrow-right >}}** to open up the transition panel for your selected action. This arrow will be followed by the action name.
+    - Enter your **[notes]{.smallcaps}** and any other additional inventory fields then click **Submit**.
+
+When you're done, click [{{< fa chevron-right >}}]() to continue.
+
+::::
+
 # Set up attestations {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
 # In summary {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
