--- a/site/training/common-slides/_work-with-workflows.qmd
+++ b/site/training/common-slides/_work-with-workflows.qmd
@@ -2,7 +2,7 @@
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
-Working with workflows
+Work with workflows
 
 ::: {.f5 .nt2 .pl2 .mb4}
 (Scroll down for the full instructions.)
