--- a/site/guide/model-workflows/_add-new-workflows.qmd
+++ b/site/guide/model-workflows/_add-new-workflows.qmd
@@ -43,9 +43,9 @@ To add a new blank workflow:
 
 1. Under **[workflow start]{.smallcaps}**, select when the workflow should be initiated:
 
-    - **Manually** — [Start this workflow manually.](/guide/model-workflows/manage-model-workflows.qmd#initiate-model-workflows)
-    - **On Model Registration** — Start this workflow when a model is [registered in your model inventory]((/guide/model-inventory/register-models-in-inventory.qmd)).
-    - **On Model Field Change** — Start this workflow on a change to a [specific model inventory field]((/guide/model-inventory/edit-model-inventory-fields.qmd)).
+    - **Manually** — [Start this workflow manually.](/guide/model-workflows/manage-model-workflows.qmd#initiate-model-workflows){target="_blank"}
+    - **On Model Registration** — Start this workflow when a model is [registered in your model inventory](/guide/model-inventory/register-models-in-inventory.qmd){target="_blank"}.
+    - **On Model Field Change** — Start this workflow on a change to a [specific model inventory field](/guide/model-inventory/edit-model-inventory-fields.qmd){target="_blank"}.
 
 1. Under **[workflow expected duration]{.smallcaps}**, define the SLA for the workflow based on the start date in days, weeks, months, or years.
 
