--- a/site/guide/model-workflows/_link-workflow-together.qmd
+++ b/site/guide/model-workflows/_link-workflow-together.qmd
@@ -55,7 +55,7 @@ When all your workflow steps have been linked together:
 ::::
 
 :::: {.content-hidden unless-format="revealjs"}
-### 1. Start the workflow
+#### Start the workflow
 
 To initiate the beginning of your workflow:
 
@@ -65,14 +65,14 @@ To initiate the beginning of your workflow:
 
 1. Continue with linking the rest your steps together.
 
-### 2. Link steps together
+#### Link steps together
 
 To link subsequent steps together:
 
 - Click the **{{< fa circle >}}** below or to the right or left of the earlier step and drag it to connect to the top **{{< fa circle >}}** on the subsequent step.
 - You're also able to link several different steps together at various points in the workflow, including stages that may circle back to previous steps.
 
-### 3. End the workflow
+#### End the workflow
 
 When all your workflow steps have been linked together:
 
