--- a/site/guide/model-workflows/_workflow-states.qmd
+++ b/site/guide/model-workflows/_workflow-states.qmd
@@ -28,7 +28,7 @@ If a state is or was previously in use  on a workflow within a {{< fa wifi >}} W
 
 
 :::: {.content-hidden unless-format="revealjs"}
-Workflow states are statuses unique to a specific workflow, discrete from [model stages](/guide/model-workflows/manage-model-stages.qmd){target="_blank"}.
+Workflow states are statuses unique to a specific workflow, discrete from model stages.
 
 #### Add workflow states
 
