--- a/site/guide/model-workflows/manage-model-stages.qmd
+++ b/site/guide/model-workflows/manage-model-stages.qmd
@@ -7,40 +7,20 @@ aliases:
   - customize-model-lifecycle-statuses.html
 ---
 
-Configure the model stages available to the models in your model inventory. Model stages are manipulated via workflow transitions and are used to track the progress of models through your organization's model lifecycles.
-
-- Default stages are provided for you as suggestions.
-- You can add, edit, remove, and define your own custom stages.
-
-::: {.callout}
-`Archived` and `Deleted` are [Reserved]{.bubble} stages,[^1] meaning they cannot be modified or removed.
-:::
+{{< include /guide/model-workflows/_configure-model-stages.qmd >}}
 
 ::: {.attn}
 
 ## Prerequisites
 
 - [x] {{< var link.login >}}
-- [x] You are a [{{< fa hand >}} Customer Admin]{.bubble} or assigned another role with sufficient permissions to perform the tasks in this guide.[^2] 
+- [x] You are a [{{< fa hand >}} Customer Admin]{.bubble} or assigned another role with sufficient permissions to perform the tasks in this guide.[^1] 
 
 :::
 
 ## Add model stages
 
-1. In the left sidebar, click **{{< fa gear >}} Settings**.
-
-2. Under Models, select **Model Stages**:
-
-    - To add a stage, click **{{< fa plus >}} Add Model Stage**.
-    - To edit a stage, click on the stage itself.
-
-3. On the Add New Model Stage modal that appears:
-
-    a. Provide a stage **[name]{.smallcaps}** 
-    b. Provide a stage **[description]{.smallcaps}** 
-    c. Assign a **[color]{.smallcaps}** to the stage
-
-4. When you are done, click **Save** to apply your changes.
+{{< include /guide/model-workflows/_add-model-stages.qmd >}}
 
 ## Edit or delete stages
 
@@ -65,7 +45,5 @@ Make sure that the stage you're deleting is not associated with any workflows or
 
 <!-- FOOTNOTES -->
 
-[^1]: [Archive and delete models](/guide/model-inventory/archive-delete-models.qmd)
-
-[^2]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
+[^1]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
