--- a/site/training/administrator-fundamentals/validmind-for-model-risk-management.qmd
+++ b/site/training/administrator-fundamentals/validmind-for-model-risk-management.qmd
@@ -108,7 +108,7 @@ Model workflow elements
 [Learn more ...](/guide/model-workflows/setting-up-model-workflows.qmd){.button target="_blank"}
 :::
 
-<br>Learn how to **configure workflows** on the next page. {{< fa hand-point-right >}}
+<br>Learn how to **manage model stages** on the next page. {{< fa hand-point-right >}}
 
 :::
 
@@ -136,42 +136,99 @@ A workflow is comprised of an interplay of these elements:
 :::
 ::::
 
-## {.scrollable}
+## {.scrollable .center}
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
-Model workflow elements
+Manage model stages
 
 ::: {.f5 .nt2 .pl2 .mb4}
 (Scroll down for the full instructions.)
 :::
 
 ::: {.tc}
-[Learn more ...](/guide/model-workflows/setting-up-model-workflows.qmd){.button target="_blank"}
+[Learn more ...](/guide/model-workflows/manage-model-stages.qmd){.button target="_blank"}
 :::
 
-<br>Learn how to **configure workflows** on the next page. {{< fa hand-point-right >}}
+<br>Try it **live** on the next page. {{< fa hand-point-right >}}
 
 :::
 
 ::: {.column width="70%" .bl .pl4 .f4}
 
-{{< include /guide/model-workflows/_set-up-model-workflows.qmd >}}
+{{< include /guide/model-workflows/_configure-model-stages.qmd >}}
 
-A workflow is comprised of an interplay of these elements:
+
+### Add model stages
+
+{{< include /guide/model-workflows/_add-model-stages.qmd >}}
+
+
+:::
+
+::::
+
+## {background-iframe="https://app.prod.validmind.ai/settings" background-interactive="true" data-preload="yes"}
+
+:::: {.slideover--b .three-quarters .auto-collapse-10}
+::: {.tc}
+**Add a model stage**
+:::
+
+1. Under Models, select **Model Stages**.
+2. Click **{{< fa plus >}} Add Model Stage**.
+2. On the Add New Model Stage modal that appears:
+    a. Provide a stage **[name]{.smallcaps}**
+    b. Provide a stage **[description]{.smallcaps}**
+    c. Assign a **[color]{.smallcaps}** to the stage
+3. When you are done, click **Save** to apply your changes.
+
+When you're done, click [{{< fa chevron-right >}}]() to continue.
+
+::::
+
+## {.scrollable}
+
+:::: {.columns}
+::: {.column width="30%" .pr4 .f2}
+Configure model workflows
+
+::: {.f5 .nt2 .pl2 .mb4}
+(Scroll down for the full instructions.)
+:::
+
+::: {.tc}
+[Learn more ...](/guide/model-workflows/configure-model-workflows.qmd){.button target="_blank"}
+:::
+
+<br>Try it **live** on the next page. {{< fa hand-point-right >}}
+
+::: {.f5 .pl3 .mt4 .pr3 .embed}
+For more assistance configuring workflows, refer to our [Workflow configuration examples](/guide/model-workflows/workflow-configuration-examples.qmd){target="_blank"}.
+
+:::
+
+:::
+
+::: {.column width="70%" .bl .pl4 .f4}
+
+{{< include /guide/model-workflows/_configure-model-workflows.qmd >}}
+
+To set up a new custom workflow, you'll need to complete these three steps in sequence:
 
 ::: {.panel-tabset}
-### Workflow step types
 
-{{< include /guide/model-workflows/_workflow-step-types.qmd >}}
+### 1. Add workflow
 
-### Conditional requirements
+{{< include /guide/model-workflows/_add-new-workflows.qmd >}}
 
-{{< include /guide/model-workflows/_conditional-requirements.qmd >}}
+### 2. Configure workflow steps
 
-### Workflow states
+{{< include /guide/model-workflows/_configure-workflow-steps.qmd >}}
 
-{{< include /guide/model-workflows/_workflow-states.qmd >}}
+### 3. Link workflow together
+
+{{< include /guide/model-workflows/_link-workflow-together.qmd >}}
 
 :::
 
