--- a/site/training/administrator-fundamentals/validmind-for-model-risk-management.qmd
+++ b/site/training/administrator-fundamentals/validmind-for-model-risk-management.qmd
@@ -201,7 +201,7 @@ Configure model workflows
 [Learn more ...](/guide/model-workflows/configure-model-workflows.qmd){.button target="_blank"}
 :::
 
-<br>Try it **live** on the next page. {{< fa hand-point-right >}}
+<br>Try it **live** on the next pages. {{< fa hand-point-right >}}
 
 ::: {.f5 .pl3 .mt4 .pr3 .embed}
 For more assistance configuring workflows, refer to our [Workflow configuration examples](/guide/model-workflows/workflow-configuration-examples.qmd){target="_blank"}.
@@ -235,18 +235,42 @@ To set up a new custom workflow, you'll need to complete these three steps in se
 :::
 ::::
 
-## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
+## {background-iframe="https://app.prod.validmind.ai/settings" background-interactive="true" data-preload="yes"}
 
 :::: {.slideover--b .auto-collapse-10}
 ::: {.tc}
-**Set up a model workflow**
+**Add a model workflow**
 :::
 
-1. Select the name of your model you registered for this course to open up the model details page.
-2. On the landing page of your model, locate the [active workflows]{.smallcaps} section and the workflow you'd like to transition.
-3. If an action is available to your role, you'll see it listed under that workflow:
-    - Click **{{< fa arrow-right >}}** to open up the transition panel for your selected action. This arrow will be followed by the action name.
-    - Enter your **[notes]{.smallcaps}** and any other additional inventory fields then click **Submit**.
+1. Under Workspace, select **Workflows**.
+2. Click **{{< fa plus >}} Add Workflow**.
+3. On the Add New Workflow modal, enter in a **[title]{.smallcaps}** and a **[description]{.smallcaps}** the workflow.
+4. Under **[workflow start]{.smallcaps}**, select when the workflow should be initiated.
+5. Under **[workflow expected duration]{.smallcaps}**, define the SLA for the workflow.
+6. Click **Add Workflow** to save your blank workflow.
+
+When you're done, click [{{< fa chevron-right >}}]() to continue.
+
+::::
+
+## {background-iframe="https://app.prod.validmind.ai/settings" background-interactive="true" data-preload="yes"}
+
+:::: {.slideover--l .auto-collapse-10}
+::: {.tc}
+**Configure & link workflow steps**
+:::
+
+1. Under Workspace, select **Workflows**.
+2. Click on the workflow you'd added earlier, then:
+  - To add a step, drag and drop a new step onto the canvas.
+  - Double-click the new step to open up the configuration modal.
+3. After you're finished with step configuration, click **Update Step** to apply your changes.
+4. After you've configured a step, link your workflow together:
+  - Locate the [**Start**]{.bubble .green .green-bg} of your workflow.
+  - Drag from the **{{< fa circle >}}** at the bottom of [**Start**]{.bubble .green .green-bg} to the top **{{< fa circle >}}** on the step you added previously.
+5. Designate the end of your workflow by dragging an **{{< fa circle-stop >}} End** step onto the canvas.
+6. Link your previous step to the **{{< fa circle-stop >}} End** step by clicking on the bottom **{{< fa circle >}}** of that step, and dragging to the top **{{< fa circle >}}** of the **{{< fa circle-stop >}} End** step.
+7. Click **Save Workflow** to apply your changes.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
